--- a/src/main/resources/templates/WebKhachHang/index.html
+++ b/src/main/resources/templates/WebKhachHang/index.html
@@ -198,6 +198,18 @@
   </div>
 </section>
 
+<script type="text/javascript">
+  (function(d, m){
+    var kommunicateSettings =
+            {"appId":"20a19e8ec21190f7ec5621374f7a576ef","popupWidget":true,"automaticChatOpenOnNavigation":true};
+    var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
+    s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
+    var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
+    window.kommunicate = m; m._globals = kommunicateSettings;
+  })(document, window.kommunicate || {});
+  /* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
+</script>
+
 <footer class="bg-gray-800 text-white py-8">
   <div class="container mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
     <div>
