--- a/src/main/resources/templates/WebQuanLy/verify-face.html
+++ b/src/main/resources/templates/WebQuanLy/verify-face.html
@@ -70,7 +70,7 @@
         }
     </style>
 </head>
-<body th:attr="data-username=${#authentication?.name}">
+<body th:attr="data-username=${username}">
 <h2>Xác minh khuôn mặt</h2>
 
 <div class="video-wrapper">
